--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,18 @@
     "name": "lmn/composer-update-manager",
     "version": "v0.0.1",
     "license": "MIT",
+    "config": {
+        "platform": {
+            "php": "5.6"
+        }
+    },
     "require": {
-        "composer/composer": "1.7.*",
-        "monolog/monolog": "1.22.0"
+        "php": "5.6",
+        "composer/composer": "1.9.*",
+        "monolog/monolog": "1.23.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.3"
+        "phpunit/phpunit": "5.7.*"
     },
     "autoload": {
         "psr-4": {
