redo readme and ser first minor version

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "lmn/composer-update-manager",
-    "version": "v0.0.1",
+    "version": "v0.1.0",
     "license": "MIT",
+    "keywords": ["php", "composer update", "package version", "package manager", "package version", "package", "version", "manager", "composer"],
     "config": {
         "platform": {
             "php": "5.6"
