--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
     },
     "require": {
         "php": "5.6",
-        "composer/composer": "1.9.*",
-        "monolog/monolog": "1.23.0"
+        "composer/composer": "1.9.*"
     },
     "require-dev": {
         "phpunit/phpunit": "5.7.*"
