github pages config

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-cayman
+title: Composer update manager
+description: Check if your composer.lock is up to date.
+show_downloads: true
